refactor: make mappers static utility classes, add Trial CRUD, and update CLAUDE.md
Mapper conventions:
- All mapper methods are static, classes are final with private constructors throwing UnsupportedOperationException
- Mappers are no longer injected via @Component; call them directly as MapperName.method()
- Updated CLAUDE.md to document this pattern

New features:
- Trial entity CRUD via TrialController, TrialService, TrialRepository
- Trial search with dynamic JPA specifications and value filtering
- TrialMapper, TrialCreateRequest, TrialResponse, TrialSearchRequest DTOs, TrialSpecification
- VariableTypeMapper extracted builder chains and response construction from VariableTypeService

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>