@@ -5,17 +5,17 @@ import it.deltascientia.dto.ExperimentResponse;
 import it.deltascientia.model.Experiment;
 import it.deltascientia.model.Variable;
 import it.deltascientia.service.VariableTypeService.ResolvedVariable;
-import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Mapper responsible for converting between Experiment entities and DTOs.
  */
-@Component
-public class ExperimentMapper {
+public final class ExperimentMapper {
+
+    private ExperimentMapper() {
+        throw new UnsupportedOperationException("ExperimentMapper is a static utility class and must not be instantiated");
+    }
 
     /**
      * Converts a creation request into a fully wired Experiment entity,
@@ -25,8 +25,8 @@ public class ExperimentMapper {
      * @param resolvedVariables variable types already resolved by the service
      * @return a new Experiment entity ready to be persisted
      */
-    public Experiment toEntity(ExperimentCreateRequest request,
-                               List<ResolvedVariable> resolvedVariables) {
+    public static Experiment toEntity(ExperimentCreateRequest request,
+                              List<ResolvedVariable> resolvedVariables) {
         var experiment = Experiment.builder()
                 .name(request.name())
                 .description(request.description())
@@ -34,7 +34,7 @@ public class ExperimentMapper {
                 .status(request.status())
                 .createdBy(request.createdBy())
                 .notes(request.notes())
-                .variables(new ArrayList<>())
+                .variables(new java.util.ArrayList<>())
                 .build();
 
         for (ResolvedVariable resolved : resolvedVariables) {
@@ -55,7 +55,7 @@ public class ExperimentMapper {
      * @param experiment the entity to convert
      * @return the response DTO
      */
-    public ExperimentResponse toResponse(Experiment experiment) {
+    public static ExperimentResponse toResponse(Experiment experiment) {
         return ExperimentResponse.builder()
                 .id(experiment.getId())
                 .name(experiment.getName())
@@ -77,7 +77,7 @@ public class ExperimentMapper {
                                     .description(type.getDescription())
                                     .build();
                         })
-                        .collect(Collectors.toList()))
+                        .toList())
                 .trials(experiment.getTrials().stream()
                         .map(t -> ExperimentResponse.TrialSummary.builder()
                                 .id(t.getId())
@@ -86,7 +86,7 @@ public class ExperimentMapper {
                                 .notes(t.getNotes())
                                 .executionDate(t.getExecutionDate())
                                 .build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 }
